--- a/EmerChile/src/main/webapp/WEB-INF/web.xml
+++ b/EmerChile/src/main/webapp/WEB-INF/web.xml
@@ -72,7 +72,7 @@
     
     <servlet-mapping>
         <servlet-name>EmerChile</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
     
     <session-config>
